# rag_agent

./: .gitignore  README.md  app.py  pyproject.toml
components/: chunking.py  generation.py  guardrails.py  indexing.py  ingestion.py  post_processing.py  retrieval.py
config/: embedding_local.py  embedding_provider.py  llm_local.py  llm_provider.py  settings.py
evals/: evaluator.py  ragas_eval.py
utils/: __init__.py  timer.py
