[project]
name = "rag_agent"
version = "0.1.0"
description = "RAG Agent"
requires-python = ">=3.11"

dependencies = [
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-openai==0.1.7",
    "chromadb>=0.5.0",
    "langchain-chroma",
    "langchain-experimental",
    "langchain-nvidia-ai-endpoints>=0.1.0",
    "streamlit>=1.56.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pymupdf>=1.24.0",
    "ragas>=0.2.0",
    "pytest>=8.0.0",
    "transformers>=4.44.0",
    "torch",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tiktoken>=0.7.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "pypdf>=6.11.0",
    "flashrank>=0.2.10",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.setuptools]
packages = ["components", "evals"]
